--- a/HW 57.ipynb
+++ b/HW 57.ipynb
@@ -2,32 +2,228 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "0fba072c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: opencv-python in c:\\users\\hewllet\\appdata\\roaming\\python\\python39\\site-packages (4.7.0.68)\n",
+      "Requirement already satisfied: numpy>=1.17.0 in c:\\users\\hewllet\\appdata\\roaming\\python\\python39\\site-packages (from opencv-python) (1.24.3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install opencv-python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0d323477",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: numpy in c:\\users\\hewllet\\appdata\\roaming\\python\\python39\\site-packages (1.24.3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
-   "id": "e4d877a5",
+   "id": "16b53643",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\hewllet\\appdata\\roaming\\python\\python39\\site-packages (3.7.1)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\hewllet\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib) (1.0.7)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\hewllet\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\hewllet\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib) (4.39.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\hewllet\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib) (1.4.4)\n",
+      "Requirement already satisfied: numpy>=1.20 in c:\\users\\hewllet\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib) (1.24.3)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\hewllet\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib) (23.1)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\hewllet\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib) (9.5.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\hewllet\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\hewllet\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: importlib-resources>=3.2.0 in c:\\users\\hewllet\\appdata\\roaming\\python\\python39\\site-packages (from matplotlib) (5.12.0)\n",
+      "Requirement already satisfied: zipp>=3.1.0 in c:\\users\\hewllet\\appdata\\roaming\\python\\python39\\site-packages (from importlib-resources>=3.2.0->matplotlib) (3.15.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\hewllet\\appdata\\roaming\\python\\python39\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c3c0cf48",
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "381e9526",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_img(path_to_file):\n",
+    "    img = cv2.imread(path_to_file)\n",
+    "    plt.axis('off')\n",
+    "    plt.imshow(img)\n",
+    "    plt.show"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0ffcd7a",
+   "metadata": {},
+   "source": [
+    "## Task2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "cce86e15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def img_saving(img_for_saving):\n",
+    "    cv2.imwrite('image.jpg',img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2787766",
+   "metadata": {},
+   "source": [
+    "## Task3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a9eb38c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def img_gamma(img, coef):\n",
+    "    inv_gamma = 1.0 / coef\n",
+    "    img = np.array([((i / 255.0) ** inv_gamma) * 255 for i in np.arange(0, 256)]).astype('uint8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "6dc32456",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def change_brightness(img, value=30):\n",
+    "    hsv = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
+    "    h, s, v = cv2.split(hsv)\n",
+    "    v = cv2.add(v,value)\n",
+    "    v[v > 255] = 255\n",
+    "    v[v < 0] = 0\n",
+    "    final_hsv = cv2.merge((h, s, v))\n",
+    "    img = cv2.cvtColor(final_hsv, cv2.COLOR_HSV2BGR)\n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "71ecf2b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def change_saturation(img, value=30):\n",
+    "    hsv = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
+    "    h, s, v = cv2.split(hsv)\n",
+    "    s = cv2.add(s,value)\n",
+    "    s[s > 255] = 255\n",
+    "    s[s < 0] = 0\n",
+    "    final_hsv = cv2.merge((h, s, v))\n",
+    "    img = cv2.cvtColor(final_hsv, cv2.COLOR_HSV2BGR)\n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "df7c9ad6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def img_resize(img, width, height):\n",
+    "    dim = (width, height)\n",
+    "    img = cv2.resize(img, dim, interpolation = cv2.INTER_AREA)\n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "d9b687f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def img_crop(img,x1,y1,x2,y2):\n",
+    "    img = img[x1:y1, x2:e2]\n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "a14b099f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def img_rotate(img, angle):\n",
+    "    image_center = tuple(np.array(image.shape[1::-1]) / 2)\n",
+    "    rot_mat = cv2.getRotationMatrix2D(image_center, angle, 1.0)\n",
+    "    result = cv2.warpAffine(image, rot_mat, image.shape[1::-1], flags=cv2.INTER_LINEAR)\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "649926ea",
+   "id": "825cebe8",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def read_img(file):\n",
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "local-venv",
+   "display_name": "env_kernel",
    "language": "python",
-   "name": "local-venv"
+   "name": "env_kernel"
   },
   "language_info": {
    "codemirror_mode": {
