--- a/HW 66.ipynb
+++ b/HW 66.ipynb
@@ -2,45 +2,219 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "29db689b",
+   "execution_count": 2,
+   "id": "98a03d7a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import cv2"
+    "import keras\n",
+    "import keras.backend as k\n",
+    "from keras.layers import Conv2D,MaxPooling2D,SpatialDropout2D,Flatten,Dropout,Dense\n",
+    "from keras.models import Sequential,load_model\n",
+    "from keras.optimizers import Adam\n",
+    "from keras.preprocessing import image\n",
+    "import cv2\n",
+    "import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c8aa92c8",
+   "execution_count": 3,
+   "id": "c72780b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model=Sequential()\n",
+    "model.add(Conv2D(32,(3,3),activation='relu',input_shape=(150,150,3)))\n",
+    "model.add(MaxPooling2D() )\n",
+    "model.add(Conv2D(32,(3,3),activation='relu'))\n",
+    "model.add(MaxPooling2D() )\n",
+    "model.add(Conv2D(32,(3,3),activation='relu'))\n",
+    "model.add(MaxPooling2D() )\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(100,activation='relu'))\n",
+    "model.add(Dense(1,activation='sigmoid'))\n",
+    "\n",
+    "model.compile(optimizer='adam',loss='binary_crossentropy',metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c83364ba",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1376 images belonging to 2 classes.\n",
+      "Found 1376 images belonging to 2 classes.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\HEWLLET\\AppData\\Local\\Temp\\ipykernel_6216\\2580032022.py:21: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
+      "  model_saved=model.fit_generator(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "86/86 [==============================] - 42s 462ms/step - loss: 0.3323 - accuracy: 0.8336 - val_loss: 0.1740 - val_accuracy: 0.9513\n",
+      "Epoch 2/10\n",
+      "86/86 [==============================] - 40s 459ms/step - loss: 0.1294 - accuracy: 0.9564 - val_loss: 0.0695 - val_accuracy: 0.9818\n",
+      "Epoch 3/10\n",
+      "86/86 [==============================] - 39s 455ms/step - loss: 0.0813 - accuracy: 0.9717 - val_loss: 0.0504 - val_accuracy: 0.9855\n",
+      "Epoch 4/10\n",
+      "86/86 [==============================] - 39s 454ms/step - loss: 0.0618 - accuracy: 0.9818 - val_loss: 0.0355 - val_accuracy: 0.9876\n",
+      "Epoch 5/10\n",
+      "86/86 [==============================] - 39s 454ms/step - loss: 0.0523 - accuracy: 0.9833 - val_loss: 0.0350 - val_accuracy: 0.9913\n",
+      "Epoch 6/10\n",
+      "86/86 [==============================] - 39s 454ms/step - loss: 0.0627 - accuracy: 0.9782 - val_loss: 0.0351 - val_accuracy: 0.9862\n",
+      "Epoch 7/10\n",
+      "86/86 [==============================] - 39s 452ms/step - loss: 0.0553 - accuracy: 0.9811 - val_loss: 0.0258 - val_accuracy: 0.9913\n",
+      "Epoch 8/10\n",
+      "86/86 [==============================] - 39s 457ms/step - loss: 0.0291 - accuracy: 0.9891 - val_loss: 0.0203 - val_accuracy: 0.9942\n",
+      "Epoch 9/10\n",
+      "86/86 [==============================] - 39s 456ms/step - loss: 0.0552 - accuracy: 0.9818 - val_loss: 0.1046 - val_accuracy: 0.9709\n",
+      "Epoch 10/10\n",
+      "86/86 [==============================] - 39s 453ms/step - loss: 0.0571 - accuracy: 0.9818 - val_loss: 0.0220 - val_accuracy: 0.9971\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "train_datagen = ImageDataGenerator(\n",
+    "        rescale=1./255,\n",
+    "        shear_range=0.2,\n",
+    "        zoom_range=0.2,\n",
+    "        horizontal_flip=True)\n",
+    "\n",
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "training_set = train_datagen.flow_from_directory('C:/Users/HEWLLET/PycharmProjects/Homework/train',\n",
+    "        target_size=(150,150),\n",
+    "        batch_size=16 ,\n",
+    "        class_mode='binary')\n",
+    "\n",
+    "test_set = test_datagen.flow_from_directory(\n",
+    "        'C:/Users/HEWLLET/PycharmProjects/Homework/train',\n",
+    "        target_size=(150,150),\n",
+    "        batch_size=16,\n",
+    "        class_mode='binary')\n",
+    "\n",
+    "model_saved=model.fit_generator(\n",
+    "        training_set,\n",
+    "        epochs=10,\n",
+    "        validation_data=test_set,\n",
+    "\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1691b6b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 191ms/step\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "False"
+       "0.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cap = cv2.VideoCapture(\"video_720.mp4\")\n",
-    "cap.set(3, 800)\n",
-    "cap.set(4, 600)"
+    "model.save('mymodel.h5',model_saved)\n",
+    "\n",
+    "#To test for individual images\n",
+    "\n",
+    "mymodel=load_model('mymodel.h5')\n",
+    "#test_image=image.load_img('C:/Users/Karan/Desktop/ML Datasets/Face Mask Detection/Dataset/test/without_mask/30.jpg',target_size=(150,150,3))\n",
+    "test_image=load_img(r'Screenshot_6.png',\n",
+    "                          target_size=(150,150,3))\n",
+    "test_image\n",
+    "test_image=image.img_to_array(test_image)\n",
+    "test_image=np.expand_dims(test_image,axis=0)\n",
+    "mymodel.predict(test_image)[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ffbe3ddf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.utils import load_img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "40f08bcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import keras.utils as image"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98a03d7a",
+   "id": "327d9e3c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mymodel=load_model('mymodel.h5')\n",
+    "\n",
+    "cap=cv2.VideoCapture(0)\n",
+    "face_cascade=cv2.CascadeClassifier('haarcascade_frontalface_default.xml')\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    _,img=cap.read()\n",
+    "    face=face_cascade.detectMultiScale(img,scaleFactor=1.1,minNeighbors=4)\n",
+    "    for(x,y,w,h) in face:\n",
+    "        face_img = img[y:y+h, x:x+w]\n",
+    "        cv2.imwrite('temp.jpg',face_img)\n",
+    "        test_image=image.load_img('temp.jpg',target_size=(150,150,3))\n",
+    "        test_image=image.img_to_array(test_image)\n",
+    "        test_image=np.expand_dims(test_image,axis=0)\n",
+    "        pred=mymodel.predict(test_image)[0][0]\n",
+    "        if pred==1:\n",
+    "            cv2.rectangle(img,(x,y),(x+w,y+h),(0,0,255),3)\n",
+    "            cv2.putText(img,'NO MASK',((x+w)//2,y+h+20),cv2.FONT_HERSHEY_SIMPLEX,1,(0,0,255),3)\n",
+    "        else:\n",
+    "            cv2.rectangle(img,(x,y),(x+w,y+h),(0,255,0),3)\n",
+    "            cv2.putText(img,'MASK',((x+w)//2,y+h+20),cv2.FONT_HERSHEY_SIMPLEX,1,(0,255,0),3)\n",
+    "        datet=str(datetime.datetime.now())\n",
+    "        cv2.putText(img,datet,(400,450),cv2.FONT_HERSHEY_SIMPLEX,0.5,(255,255,255),1)\n",
+    "          \n",
+    "    cv2.imshow('img',img)\n",
+    "    \n",
+    "    if cv2.waitKey(1)==ord('q'):\n",
+    "        break\n",
+    "    \n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
